--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,8 @@
 		<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 		<script src="js/jquery-3.1.1.min.js"></script>
 		<script type="text/javascript" src="js/materialize.min.js"></script>
+		
+		<script type="text/javascript" src="js/firebase.js"></script>
 	</head>
 	<body>
 		<header>
