--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,8 @@
 		<script src="js/jquery-3.1.1.min.js"></script>
 		<script type="text/javascript" src="js/materialize.min.js"></script>
 		
+		<script src="https://www.gstatic.com/firebasejs/3.6.6/firebase.js"></script>
+		<scipt type="text/javascript" src="js/init-firebase.js"></script>
 		<script type="text/javascript" src="js/firebase.js"></script>
 	</head>
 	<body>
