--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
 		<script type="text/javascript" src="js/materialize.min.js"></script>
 		
 		<script src="https://www.gstatic.com/firebasejs/3.6.6/firebase.js"></script>
-		<scipt type="text/javascript" src="js/init-firebase.js"></script>
+		<script type="text/javascript" src="js/init-firebase.js"></script>
 		<script type="text/javascript" src="js/firebase.js"></script>
 	</head>
 	<body>
