--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
 		<script src="https://www.gstatic.com/firebasejs/3.6.6/firebase.js"></script>
 		<script type="text/javascript" src="js/init-firebase.js"></script>
 		<script type="text/javascript" src="js/firebase.js"></script>
+		<script type="text/javascript" src="js/app.js"></script>
 	</head>
 	<body>
 		<header>
@@ -21,8 +22,8 @@
 		</header>
 		<div class="container">
 			<div class = "row col s12 m9 l10">
-				<h2>今日の通信 2017/01/09</h2>
-				<table class="striped">
+				<h2 id="date">今日の通信 2017/01/09</h2>
+				<table class="striped" id="today">
 					<thead>
 						<tr>
 							<th>時間</th>
@@ -89,7 +90,7 @@
 					</tbody>
 				</table>
 				<h2>ブラックリスト</h2>
-				<table class="striped">
+				<table class="striped" id="blacklist">
 					<thead>
 						<tr>
 							<th>ドメイン</th>
@@ -113,7 +114,7 @@
 						</tr>
 					</tbody>
 				</table>
-				<h2>できたらグラフ</h2>
+				<!--<h2>できたらグラフ</h2>-->
 			</div>
 		</div>
 	</body>
