--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
 		<header>
 		<nav class="top-nav grey-text text-darken-4 red darken-2">
 			<div class="nav-wrapper valign-wrapper ">
-			<a href="/" class="brand-logo page-title valign center">Little Library</a>
+			<a href="/" class="brand-logo page-title valign center">Panopticon</a>
 			</div>
 		</nav>
 		</header>
